# altis-cashflow-forecast

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: launch.json
.streamlit/: config.toml
app/: streamlit_app.py
data/: .gitignore
data/actual_data/: 82604-8000.xlsx  82604-8002.xlsx  82604-8004.xlsx  82604-8005.xlsx
data/actual_data/andijk/: andijk-8000.xlsx  andijk-8002.xlsx  andijk-8004.xlsx  andijk-8005.xlsx
data/actual_data/heeze/: heeze-8000.xlsx  heeze-8002.xlsx  heeze-8004.xlsx  heeze-8005.xlsx
data/actual_data/ummels/: 82604-8000.xlsx  (+3 more)
data/raw/: covenant_terms.md  exact_export.csv  gilde_export.csv  gl_mapping.csv  milestones.csv  opening_balances.csv  snelstart_export.csv  weather_daily.csv  wip_projects.csv  yuki_export.csv
docs/weather/: andijk.md  brunssum.md  heeze.md  winschoten.md
notebooks/: .gitignore  ALTIS-CONVERSION-DESC.md  Dockerfile  Taskfile.yml  cash_events.py  data_loader.ipynb  docker-compose.yml  ingest.py  requirements-notebooks.txt
notebooks/data/: .gitignore
scripts/: generate_dev_actuals.py  generate_sample_data.py
src/: __init__.py  audit.py  calibrate.py  config.py  covenant.py  drivers.py  excel_ingest.py  forecast.py  gl_ai.py  ingest.py  pipeline.py  reconcile.py  weather.py  weather_forecast.py
tests/: conftest.py  test_audit.py  test_excel_ingest.py  test_forecast.py  test_pipeline.py
weather_data/: historical_andijk.json  historical_brunssum.json  historical_heeze.json  historical_winschoten.json  seas5_andijk.json  seas5_brunssum.json  seas5_heeze.json  seas5_winschoten.json
(+34 files in other folders)
